<resources>
    <string name="app_name">Restaurante</string>
    <string name="titulo">Restaurante</string>
    <string name="nome">Insira seu nome : </string>
    <string name="bebidas">Bebidas : </string>
    <string name="coca">Coca - Cola (R$ 10,00)</string>
    <string name="guarana">Guaraná (R$ 5,00)</string>
    <string name="pagamento">Forma de Pagamento:</string>
    <string name="cartao">Cartão</string>
    <string name="dinheiro">Dinheiro (10% de desconto!)</string>
    <string name="btn">OK</string>


</resources>