<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/idNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bebidas"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/idCoc"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/coca" />

    <CheckBox
        android:id="@+id/idGua"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/guarana" />

    <View
        android:id="@+id/divider3"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView4"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pagamento"
        android:textSize="18sp" />


    <RadioGroup
        android:id="@+id/idGrupo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/idCartao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cartao" />

        <RadioButton
            android:id="@+id/idDinheiro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dinheiro" />

    </RadioGroup>

    <Button
        android:id="@+id/idOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btn"
        android:onClick="ok" />


</LinearLayout>
